--- a/package.json
+++ b/package.json
@@ -9,6 +9,13 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.17.1"
+    "axios": "^0.21.0",
+    "cheerio": "^1.0.0-rc.3",
+    "db": "^3.3.0",
+    "express": "^4.17.1",
+    "mongo": "^0.1.0",
+    "mongoose": "^5.11.1",
+    "request": "^2.88.2",
+    "xpath-html": "^1.0.2"
   }
 }
