--- a/package.json
+++ b/package.json
@@ -13,12 +13,14 @@
   "dependencies": {
     "axios": "^0.21.0",
     "cheerio": "^1.0.0-rc.3",
+    "cookie-parser": "^1.4.5",
     "db": "^3.3.0",
     "express": "^4.17.1",
     "mongo": "^0.1.0",
     "mongoose": "^5.11.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-router-dom": "^5.2.0",
     "request": "^2.88.2",
     "xpath-html": "^1.0.2"
   },
