--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^0.21.0",
+    "bcrypt": "^5.0.0",
     "cheerio": "^1.0.0-rc.3",
     "cookie-parser": "^1.4.5",
     "db": "^3.3.0",
